// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`creates a mock GeoPoint field model 1`] = `
[
  {
    "config": {
      "label": "Et",
    },
    "type": "GeoPoint",
  },
  {
    "config": {
      "label": "Et",
    },
    "type": "GeoPoint",
  },
]
`;

exports[`supports number seed 1`] = `
[
  {
    "config": {
      "label": "Egestas",
    },
    "type": "GeoPoint",
  },
  {
    "config": {
      "label": "Egestas",
    },
    "type": "GeoPoint",
  },
]
`;
